# ollama-chat-tauri

./: .gitignore  LICENSE  README.md
src/apps/desktop/: index.html  init.sql  ollamachat.db  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/apps/desktop/src/: App.jsx
src/apps/desktop/src-tauri/: Cargo.toml  build.rs  ollamachat.db  tauri.conf.json
src/apps/desktop/src-tauri/icons/: icon.icns
src/apps/desktop/src-tauri/src/: commands.rs  db.rs  main.rs  ollama_api.rs  session.rs
src/apps/desktop/src/components/: ChatWindow.jsx  SideBar.jsx
