[package]
name = "ollamachat"
version = "0.5.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "1.3", features = ["dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
rusqlite = "0.29.0"
chrono = "0.4"
futures-util = "0.3"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7"
regex = "1"

[build-dependencies]
tauri-build = { version = "1.3", features = [] }
